<resources>
    <string name="app_name">ScholarHub</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="new_to_scholar_s_hub_sign_up">New to scholar\'s hub sign up</string>
    <string name="prompt_email">prompt_Email</string>
    <string name="log_in_and_connect_with_scholar_s_hub">log in and connect with scholar\'s hub</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgotten_your_password">Forgotten your password</string>
    <string name="we_ll_send_you_a_code_that_you_can_use_to_login">We\'ll send you a code that you can use to LogIn</string>
    <string name="confirm_via_sms">Confirm via SMS</string>
    <string name="confirm_via_email">Confirm via Email</string>
    <string name="send">Send</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="your_email_id">Your Email Id</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="mobile_no">Mobile No</string>
    <string name="sign_up">Sign Up</string>
    <string name="female">Female</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="alexamaxico_gmail_com">alexamaxico@gmail.com</string>
    <string name="alexa_maxico">Alexa Maxico</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
