<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pic"
    tools:context=".Forgotten_password">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        tools:ignore="ContentDescription"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:layout_marginBottom="468dp"
        android:src="@drawable/logo" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="260dp"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="@color/colorWhite"
        android:text="@string/we_ll_send_you_a_code_that_you_can_use_to_login"
        android:textSize="30sp"
        android:textStyle="italic"/>

    <Switch
        android:id="@+id/sms_switch"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="205dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="@color/colorWhite"
        android:text="@string/confirm_via_sms" />

    <Switch
        android:id="@+id/email_switch"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="157dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="@color/colorWhite"
        android:text="@string/confirm_via_email" />

    <Button
        android:id="@+id/button2"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="83dp"
        android:text="@string/send"
        android:textStyle="bold"

        android:textColor="@color/colorBlack"
        android:background="@drawable/button_radius"
        android:textSize="20sp" />


</RelativeLayout>