<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pic"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="497dp"
        android:src="@drawable/logo"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="479dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="421dp"
        android:backgroundTint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="479dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="373dp"
        android:hint="@string/enter_last_name"
        android:backgroundTint="@color/colorWhite"

        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:textColor="@color/colorWhite"
        android:id="@+id/email_id"
        android:layout_width="479dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="319dp"
        android:hint="Your Email Address"
        android:backgroundTint="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText

        android:id="@+id/password"
        android:textColor="@color/colorWhite"
        android:layout_width="479dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="273dp"
        android:hint="Enter Your Password"
        android:backgroundTint="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText

        android:id="@+id/cnfrm_password"
        android:layout_width="479dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="228dp"
        android:backgroundTint="@color/colorWhite"
        android:hint="Confirm Your Password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="435dp"
        android:layout_marginBottom="153dp"
        android:paddingLeft="5dp"
        android:text="@string/gender"
        android:textColor="@color/colorWhite"
        android:textSize="19sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="131dp"
        >

        <RadioButton
            android:id="@+id/male"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorWhite"
            android:text="@string/male"
            android:textColor="@color/colorWhite" />
    </RadioGroup>

    <Button
        android:id="@+id/SUbtn"
        android:layout_width="151dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="51dp"
        android:text="@string/sign_up"
        android:textStyle="bold"

        android:background="@drawable/button_radius"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/mobile_no"
        android:layout_width="479dp"
        android:layout_height="57dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="176dp"
        android:backgroundTint="@color/colorWhite"
        android:hint="Your Mobile Number"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/female"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="97dp"
        android:buttonTint="@color/colorWhite"
        android:text="@string/female"
        android:textColor="@color/colorWhite" />

</RelativeLayout>
